--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,11 @@ django-extensions==2.2.5
 celery==4.3.0
 django-celery-beat==1.5.0
 redis==3.3.11
+honcho==0.5.0
+static3==0.5.1
+kombu==3.0.23
+django-toolbelt==0.0.1
+dj-static==0.0.6
+billiard==3.3.0.18
+amqp==1.4.6
+anyjson==0.3.3
